added ability to remove books

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>HELLO WORLD!</h1>
+<h1>LIBRARY</h1>
+<app-addbooks></app-addbooks>
 <h2>Selected Book: {{selectedBook?.title}}</h2>
 <app-books [books]="books" (bookSelected)='selectedBookEvent($event)'></app-books>
-<app-addbooks></app-addbooks>
