--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,4 +1,7 @@
-<p>books works!</p>
 <ul>
-    <li *ngFor="let book of books">Title: {{book.title}} <button (click)="onBookSelected(book)">select</button></li>
+  <li *ngFor="let book of books; let i = index" [ngClass]='{"style": i % 2 == 0, "style2": i % 2 == 1}'>
+    <p>Title: {{ book.title }}</p>
+    <button (click)="onBookSelected(book)">select</button>
+    <button id="delete" (click)="onBookDeleted(book)">remove</button>
+  </li>
 </ul>
